assigned partitions and subs models for kafka topics nef cell location models empty list checks, valid supi check nsiRegex, naiRegex, organised example AoIs, added discovery, register and assignment timing constants toOptional, feature negotiation conversions mapNefUeStateToUeMobility improvements parsePlmnId, getNefScenarioPlmnId and mapNefCellToAOI functions for NEF automation and plmnId fetching AoI conversion operations for nef cells and ue mobility convertDockerIdToUUID for prometheus metrics added cellLocation to all user location types added dnn regex to ladnDnns in event sub model KafkaTopic enum LocationInfoWithSupi model for grafana PointUncertaintyCircleResult handling for ue mobility in ModelUtil  nef models  NfLoadLevelInformation protobuf schema (unused)